# corrector

./: .gitignore  Cargo.toml  README.md  spell.py
benches/: benchy.rs
src/: lib.rs  main.rs  util.rs  utils.rs
